added a bit more to the menu

--- a/core/templates/site.html
+++ b/core/templates/site.html
@@ -35,8 +35,9 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="/">Home</a></li>
-              <li><a href="/about/">About</a></li>
               <li><a href="{% url chronam_newspapers %}">Newspapers</a></li>
+              <li><a href="{% url chronam_about %}">About</a></li>
+              <li><a href="{% url chronam_about_api %}">API</a></li>
               <li><a href="{% url chronam_reports %}">Reports</a></li>
               <li><a href="/help/">Help</a></li>
             </ul>
