--- a/core/templates/page.html
+++ b/core/templates/page.html
@@ -363,7 +363,7 @@
   <div id="item-wrapper"> 
     <div id="imageViewer_nav">
       <div id="item-ctrl">
-        <div style="padding-left: 160px; padding-top: 10px; border: thin solid red;">
+        <div style="padding-left: 160px; padding-top: 10px;">
         <span class="c-images"> 
           <label for="pageNum">Image:</label> 
           <select name="pageNum" id="pageNum" class="input-small">
