fixed random starting image (hopefully the last one introduced by the skipped merge(s) while migrating the repo)

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -31,7 +31,7 @@
 {{ block.super }}
 
 <script type="text/javascript"> 
-  var j = Math.floor(Math.random() * {{frontpages_panes|length}});
+  var j = Math.floor(Math.random() * {{pages|length}});
   $('.carousel').carousel(j)
 </script> 
 {% endblock %}
