tell carousel to cycle after jumping to random starting point

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -33,5 +33,6 @@
 <script type="text/javascript"> 
   var j = Math.floor(Math.random() * {{pages|length}});
   $('.carousel').carousel(j)
+  $('.carousel').carousel('cycle')
 </script> 
 {% endblock %}
