--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -1,35 +1,29 @@
-{% extends "site_base_alt.html" %}
+{% extends "site_base.html" %}
+
 {% load static from staticfiles %}
 {% load humanize %}
  
-{% block sub_page_head %}{% endblock %}
-
-{% block subcontent %}
-
+{% block content %}
 <div class="row">
   <div class="span3"></div>
   <div id="myCarousel" class="carousel slide span6">
-    <h2><a id="hundredYears" href='{% url chronam_search_pages_results %}?dateFilterType=range&date1={{date|date:"m/d/Y" }}&date2={{date|date:"m/d/Y"}}/'>100 Years Ago Today <small>{{ date|date:"F j, Y" }} ({{pages|length}})</small></a></h2>
-    <div class="carousel-inner">
-      {% for page in pages %}
+    <h2><a href='{% url chronam_search_pages_results %}?dateFilterType=range&date1={{date|date:"m/d/Y" }}&date2={{date|date:"m/d/Y"}}/'>100 Years Ago Today <small>{{ date|date:"F j, Y" }} ({{pages|length}})</small></a></h2>
+    <div class="carousel-inner">{% for page in pages %}
       <div class="item{% if forloop.first %} active{% endif %}">
           <a class="thumbnail" href="{{page.url}}">
               <img src="{{page.medium_url}}" alt="{{page.label}}" />
           </a>
-      </div>
-      {% endfor %}
+      </div>{% endfor %}
     </div>
     <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
     <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
   </div>
   <div class="span3"></div>
 </div>
-{% endblock subcontent %}  
+{% endblock content %}
 
  
-{% block javascript %}
-{{ block.super }}
-
+{% block javascript %}{{ block.super }}
 <script type="text/javascript"> 
   var j = Math.floor(Math.random() * {{pages|length}});
   $('.carousel').carousel(j)
