--- a/core/templates/page.html
+++ b/core/templates/page.html
@@ -1,35 +1,10 @@
 {% extends "site_base.html" %}
 {% load static from staticfiles %}
 
-{% block javascript %}
-{{ block.super }}
-    <script type="text/javascript" src="{% static 'js/openseadragon.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/jquery.ba-bbq.min.js' %}"></script> 
-    <script type="text/javascript" src="{% static 'js/page.js' %}"></script>
-
-    <div id="page_data"
-	 data-static_url="{% static '' %}",
-	 data-width="{{page.jp2_width}}"
-	 data-height="{{page.jp2_length}}"
-	 data-page_url="{% url chronam_page title.lccn,issue.date_issued,issue.edition,page.sequence %}"
-	 data-coordinates_url="{% url chronam_page_coordinates page.issue.title.lccn,page.issue.date_issued,page.issue.edition,page.sequence %}"
-	 data-navigation_url="{% url chronam_search_pages_navigation %}?"
-	 ></div>
-
-    <noscript><!-- without javascript the pageviewer does not work; display OCR in this case instead. -->
-        <h3>Newspaper Page Text</h3>
-        <pre>{{ page.ocr.text }}</pre>
-    </noscript>
-
-    {% endblock %}
-
-{% block lc_metadata %}
+{% block head_content %}{{ block.super }}
     {% with page as title_metadata %}
     {% include "includes/lc_metadata.html" %}
     {% endwith %}
-{% endblock %}
-
-{% block extrahead %}
     <link rel="primaryTopic" href="{{ page.abstract_url }}" />
     <link rel="resourcemap" type="application/rdf+xml" href="{% url chronam_page_dot_rdf page.issue.title.lccn, page.issue.date_issued, page.issue.edition, page.sequence %}" />
     <link rel="alternate" type="application/json" href="{% url chronam_page_dot_json page.issue.title.lccn, page.issue.date_issued, page.issue.edition, page.sequence %}" />
@@ -47,150 +22,150 @@
     <meta property="og:description" content="{{ page_title }}, brought to you by {{ image_credit }}, and the National Digital Newspaper Program." />
 
     <style type="text/css">
-       /* viewer */
-       #viewer_container
-       {
-           width: 100%;//500px;
-           height: 900px;
-           background-color: black;
-           border: 1px solid black;
-           color: white;   /* for error messages, etc. */
-       }
-       .overlay
-       {
-           border: 1px solid red;
-           opacity: 0.4;      
+#viewer_container_container {
+    display: inline-block;
+    position: relative;
+    width: 100%;
+}
+#dummy { /* for specifying aspect ratio of viewer_container */
+    padding-top: 135%;
+}
+#viewer_container {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0px;
+    padding: 0px;
+    background-color: black;
+    border: 1px solid black;
+    color: white;   /* for error messages, etc. */
+}
+.overlay
+{
+    border: 1px solid red;
+    opacity: 0.4;      
            -moz-opacity: 0.4;
            -webkit-opacity: 0.4;
            background: red;
        }
+.pagetools > li
+{
+       margin-top: 3px;
+       line-height: 33px;
+}
+.pagetools a.disabled,
+.pagetools a.disabled:hover {
+  color: #999999;
+}
+
+.toolbar
+{
+    height:     33px;
+    border:     none;
+    color:      #333;
+    padding:    0px;
+    background-color: transparent;
+}
+.toolbar.fullpage{
+    width:      100%;
+    border:     none;
+    position:   fixed;
+    z-index:    999999;
+    left:       0;
+    top:        0;
+    background-color: transparent;
+}
     </style>
 
-    <style type="text/css" media="screen">
-      #imageViewer_nav {
-          /*border: 0px;*/
-          margin: 0px;
-          padding: 0px;
-      }
-      #item-ctrl {
-          padding: 0px;
-          margin: 0px;
-      }
-    </style>  
-      
-{% endblock %}
+{% endblock head_content %}      
 
-{% block sharetool_container_left %}
-<div class="nav_result" style="display: none">
-    <a class="ar-back backtoresults" href="">Back to search results</a>
-    <span class="previous disabled"><a class="ar-back" href="">Previous</a> |</span>
-    <span class="current"></span> of <span class="total"></span>
-    <span class="next disabled">| <a class="ar-more" href="">Next</a></span>
-</div>
-{% endblock %}
 
-{% block download_links %}
-{
-    link: '{% url chronam_page_jp2 title.lccn, issue.date_issued, issue.edition, page.sequence %}',
-    label: 'image/jp2',
-    meta: '',
-},
-{
-    link: '{% url chronam_page_pdf title.lccn, issue.date_issued, issue.edition, page.sequence %}',
-    label: 'application/pdf',
-    meta: '',
-},
-{
-    link: '{% url chronam_page_ocr_xml title.lccn, issue.date_issued, issue.edition, page.sequence %}',
-    label: 'application/xml',
-    meta: '',
-},
-{
-    link: '{% url chronam_page_ocr_txt title.lccn, issue.date_issued, issue.edition, page.sequence %}',
-    label: 'text/plain',
-    meta: '',
-},
-{% endblock %}
-                      
-{% block page_head %}
-<h1>
-{{ page_head_heading }}<br />
-<span>About <a href="{% url chronam_title title.lccn %}">{{page_head_subheading}}</a></span>
-</h1>
-{% endblock %}
+{% block page_head %}<h1>{{ page_head_heading }}</h1>{% endblock %}
 
-{% block body %}
-{{ block.super }}
-{% endblock %}
 
-{% block subcontent %}
-
-  <div class="clear"></div>
-  <p class="gray nomargin-bottom2">Image provided by: {{image_credit}}</p> 
-  <div id="item-wrapper"> 
-    <div id="imageViewer_nav">
-      <div id="item-ctrl">
-        <div style="padding-left: 160px; padding-top: 10px;">
-        <span class="c-images"> 
-          <label for="pageNum">Image:</label> 
-          <select name="pageNum" id="pageNum" class="input-small">
-            {% for p in issue.pages.all %}
-            <option value="{% url chronam_page title.lccn,issue.date_issued,issue.edition,p.sequence %}" {% ifequal p.sequence page.sequence %}selected="selected"{% endifequal %}>{{p.sequence}}</option>
-            {% endfor %}
-          </select>
-          of {{issue.pages.all|length}}.
-        </span> 
-        <span class="c-pages"> 
-          {% if page.previous %}
-          <a rel="previous" href="{% url chronam_page title.lccn,issue.date_issued,issue.edition,page.previous.sequence %}"><img src="{% static 'images/item_btn_prev.png' %}" width="17" height="17" alt="Previous Page"></a> 
-          {% endif %}
-          <strong>Page</strong> 
-          {% if page.next %}
-          <a rel="next" href="{% url chronam_page title.lccn,issue.date_issued,issue.edition,page.next.sequence %}"><img src="{% static 'images/item_btn_next.png' %}" width="17" height="17" alt="Next Page"></a>
-          {% endif %}
-          <a rel="up" href="{% url chronam_issue_pages title.lccn,issue.date_issued,issue.edition %}"><small>All Pages</small></a> 
-        </span> 
-        <span class="c-issues"> 
-          {% if previous_issue_first_page %}
-          <a rel="previous" href="{% url chronam_page title.lccn,previous_issue_first_page.issue.date_issued,previous_issue_first_page.issue.edition,previous_issue_first_page.sequence %}"><img src="{% static 'images/item_btn_prev.png' %}" width="17" height="17" alt="Previous Issue" /></a> 
-          {% endif %}
-          <strong>Issues</strong> 
-          {% if next_issue_first_page %}
-          <a rel="next" href="{% url chronam_page title.lccn,next_issue_first_page.issue.date_issued,next_issue_first_page.issue.edition,next_issue_first_page.sequence %}"><img src="{% static 'images/item_btn_next.png' %}" width="17" height="17" alt="Next Issue" /></a><a class="all" href="{% url chronam_issues title.lccn %}"><small>All Issues</small></a> 
-          {% endif %}
-        </span>
-        {% if page.jp2_filename %}
-        <span class="c-view"> 
-          <!-- view --> 
-          <a class="text" href="{% url chronam_page_ocr title.lccn,issue.date_issued,issue.edition,page.sequence %}">Text</a> <span>|</span> <a href="{% url chronam_page_pdf title.lccn, issue.date_issued, issue.edition, page.sequence %}">PDF</a> 
-        </span> 
-        <span class="c-download"> 
-          <!-- download --> 
-          <strong>Download:</strong> <a href="{% url chronam_page_jp2 title.lccn, issue.date_issued, issue.edition, page.sequence %}">JP2 ({{image_size}})</a> 
-        </span>
-        <span class="c-clip">
-             <a id="clip" href="#" target="print"><img src="{% static 'images/item_clip_icon.png' %}" width="18" height="17" alt="Clip Image" /></a>
-        </span>
-        {% endif %}
-        </div>
-      </div><!-- end id:item-ctrl -->
-
+{% block subcontent %}  
+    <div>
+      <div class="row">
+	<div id="item-ctrl" class="toolbar span3"></div>
+	<div class="span9">
+	  <ul class="pagetools inline">
+	    <li>
+	      <a rel="previous"{% if page.previous %} href="{% url chronam_page title.lccn,issue.date_issued,issue.edition,page.previous.sequence %}"{% else %} class="disabled"{% endif %}>
+		<i class="icon-chevron-left"></i> prev
+	      </a> 
+	      Page
+	      <a rel="next"{% if page.next %} href="{% url chronam_page title.lccn,issue.date_issued,issue.edition,page.next.sequence %}"{% else %} class="disabled"{% endif %}>
+		next <i class="icon-chevron-right"></i>
+	      </a>
+	    </li>
+	    <li>
+	      <a rel="previous"{% if previous_issue_first_page %} href="{% url chronam_page title.lccn,previous_issue_first_page.issue.date_issued,previous_issue_first_page.issue.edition,previous_issue_first_page.sequence %}"{% else %} class="disabled"{% endif %}>
+		<i class="icon-chevron-left"></i> prev
+	      </a>
+	      Issue
+	      <a rel="next"{% if next_issue_first_page %} href="{% url chronam_page title.lccn,next_issue_first_page.issue.date_issued,next_issue_first_page.issue.edition,next_issue_first_page.sequence %}"{% else %} class="disabled"{% endif %}>
+		next <i class="icon-chevron-right"></i>
+	      </a>
+	    </li>
+	    <li>
+	      <a href="{% url chronam_page_ocr title.lccn,issue.date_issued,issue.edition,page.sequence %}">
+		Text <i class="icon-font"></i>
+	      </a>
+	    </li>
+	    <li>
+	      <a href="{% url chronam_page_pdf title.lccn, issue.date_issued, issue.edition, page.sequence %}">
+		PDF <i class="icon-file"></i>
+	      </a>
+	    </li>
+	    <li>
+	      <a href="{% url chronam_page_jp2 title.lccn, issue.date_issued, issue.edition, page.sequence %}">
+		JP2 ({{image_size}}) <i class="icon-picture"></i>
+	      </a>
+	    </li>
+	    <li>
+	      <a id="clip" href="#" target="print">
+		Clip Image <i class="icon-camera"></i>
+	      </a>
+	    </li>
+          </ul>
+	</div>
+      </div>
       {% if page.jp2_filename %}
-      <div id="viewer_container"></div>
+      
+      <div id="viewer_container_container">
+	<div id="dummy"></div>
+	<div id="viewer_container" class="openseadragon span12"></div>
+      </div>
+
+
       {% else %}
       <div class="missing">
         <h3>Missing Page: {{explanation}}</h3>
       </div>
       {% endif %}
+    </div>
       
-      <div class="item-foot"> 
-        <ul class="plain"> 
-          <li><i>{{title.display_name}}</i> ({{title.place_of_publication}}), {{issue.date_issued|date:"d N Y"}}. <i>Chronicling America: Historic American Newspapers</i>. Lib. of Congress.  &lt;<a href="{% url chronam_page title.lccn,issue.date_issued,issue.edition,page.sequence %}">http://{{host}}{% url chronam_page title.lccn,issue.date_issued,issue.edition,page.sequence %}</a>&gt;</li> 
-          {% if page.on_flickr %}
-          <li><strong>Flickr Link</strong> <a href="{{ page.first_flickr_url }}">{{ page.first_flickr_url }}</a></li> 
-          {% endif %}
-        </ul> 
-      </div>
-    </div><!-- end id:imageViewer_nav --> 
-  </div><!-- end id:item-wrapper --> 
+{% endblock %}
+
+{% block javascript %}
+{{ block.super }}
+    <script src="{% static 'js/openseadragon.js' %}"></script>
+    <script src="{% static 'js/jquery.ba-bbq.min.js' %}"></script> 
+    <script src="{% static 'js/page.js' %}"></script>
+
+    <div id="page_data"
+	 data-static_url="{% static '' %}",
+	 data-width="{{page.jp2_width}}"
+	 data-height="{{page.jp2_length}}"
+	 data-page_url="{% url chronam_page title.lccn,issue.date_issued,issue.edition,page.sequence %}"
+	 data-coordinates_url="{% url chronam_page_coordinates page.issue.title.lccn,page.issue.date_issued,page.issue.edition,page.sequence %}"
+	 data-navigation_url="{% url chronam_search_pages_navigation %}?"
+	 ></div>
+
+    <noscript><!-- without javascript the pageviewer does not work; display OCR in this case instead. -->
+        <h3>Newspaper Page Text</h3>
+        <pre>{{ page.ocr.text }}</pre>
+    </noscript>
 {% endblock %}
