--- a/core/templates/site.html
+++ b/core/templates/site.html
@@ -8,11 +8,19 @@
     <meta name="author" content="">
     <style>
       body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+        padding-top: 41px; /* to make the container go all the way to the bottom of the topbar */
       }
     </style>
     <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" media="screen">
     <link href="{% static 'bootstrap/css/bootstrap-responsive.css' %}" rel="stylesheet">
+    <style>
+      .breadcrumb {
+        margin: 0 0 5px;
+      }
+      #myCarousel {
+        margin-top: 10px;
+      }
+    </style>
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -30,7 +38,7 @@
           <a class="brand" href="/">chronam</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="/">Home</a></li>
+              <li><a href="/">Home</a></li>
               <li><a href="{% url chronam_newspapers %}">Newspapers</a></li>
               <li><a href="{% url chronam_about %}">About</a></li>
               <li><a href="{% url chronam_about_api %}">API</a></li>
@@ -64,5 +72,13 @@
     </div>{% endblock body_content %}{% block javascript %}
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>{% endblock javascript %}
+    <script type="text/javascript">
+(function($) {
+    function initPage() {
+        $('ul.nav > li > a[href="' + document.location.pathname + '"]').parent().addClass('active');
+    }
+    $(initPage);
+})(jQuery)
+    </script>
   </body>
 </html>
