--- a/core/templates/site.html
+++ b/core/templates/site.html
@@ -6,13 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <style>
-      body {
-        padding-top: 41px; /* to make the container go all the way to the bottom of the topbar */
-      }
-    </style>
     <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" media="screen">
     <link href="{% static 'bootstrap/css/bootstrap-responsive.css' %}" rel="stylesheet">
+    <style>
+    body {
+	padding-top: 41px;
+    }
+    @media (max-width: 979px) {
+	body {
+	    padding-top: 0px;
+	}
+	.navbar-fixed-top {
+	    margin-bottom: 0px;
+	}
+    }
+    </style>
     <style>
       .breadcrumb {
         margin: 0 0 5px;
