cleaning up and adding highlights to core's 'search pages results' page; refs #5.

--- a/core/templates/search_pages_results.html
+++ b/core/templates/search_pages_results.html
@@ -38,7 +38,11 @@
     <li class="span3">
       <div style="height: 310px;">
 	<a href="{{ object.highlight_url }}" class="thumbnail" title="{% with object.issue.title as title %}{{title.display_name}} ({{title.place_of_publication}}), {{object.issue|label}}, {{object|label}}{% endwith %}">
-	  <img src="{{ object.thumb_url }}" alt="">
+	  <img src="{{ object.thumb_url }}" alt=""
+	       class="highlight_words"
+	       data-script_name="{{script_name}}"
+	       data-id="{{object.url}}"
+	       data-words="{{object.words|join:' '}}">
 	</a>
       </div>
     </li>
@@ -48,4 +52,10 @@
 </div>
 
 
+{% endblock %}
+
+
+{% block javascript %}
+{{ block.super }}
+    <script src="{% static 'js/highlight.js' %}"></script>
 {% endblock %}
