--- a/core/templates/site.html
+++ b/core/templates/site.html
@@ -20,14 +20,16 @@
 	    margin-bottom: 0px;
 	}
     }
-    </style>
-    <style>
-      .breadcrumb {
+    .breadcrumb {
         margin: 0 0 5px;
-      }
-      #myCarousel {
+    }
+    #myCarousel {
         margin-top: 10px;
-      }
+    }
+    .highlight_words div {
+	background-color: red;
+	opacity: 0.4;
+    }
     </style>
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
