--- a/core/templates/site.html
+++ b/core/templates/site.html
@@ -26,9 +26,40 @@
     #myCarousel {
         margin-top: 10px;
     }
+
+    ul.newspaper_pages li.span4 {
+	height: 450px;
+    }
+    @media (min-width: 1200px) {
+	ul.newspaper_pages li.span4 {
+	    height: 575px;
+	}
+    }
+    @media (max-width: 979px) and (min-width: 768px) {
+	ul.newspaper_pages li.span4 {
+	    height: 350px;
+	}
+    }
+    @media (max-width: 767px) {
+	ul.newspaper_pages li.span4 {
+	    height: auto;
+	}
+    }
+
     .highlight_words div {
-	background-color: red;
-	opacity: 0.4;
+	margin-top: -3px;
+	padding-top: 3px;
+	margin-bottom: 3px;
+	padding-bottom: 3px;
+	margin-left: -1px;
+	padding-left: 1px;
+	margin-right: 1px;
+	padding-right: 1px;
+	border-width: 1px;
+	border-style: solid;
+	border-color: black;
+	background:transparent; /* fallback for browsers not supporting rgba */
+	background: rgba(255, 0, 0, 0.4);
     }
     </style>
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
