--- a/core/templates/page_print.html
+++ b/core/templates/page_print.html
@@ -1,6 +1,10 @@
 {% extends "site_base.html" %}
-{% block subcontent %}
+{% block content %}
 <p>
   <img src="{% url chronam_page_image_tile lccn,issue.date_issued,issue.edition,page.sequence,width,height,x1,y1,x2,y2 %}" alt="Page" />
 </p>
+
+<p>Image provided by {{issue.batch.awardee.name}}</p>
+<p>Persistent link: <a href="{{url}}">http://{{host}}{{url}}</a></p>
+
 {% endblock %}
