put in the loc branding into the loc base.html

--- a/loc/templates/base.html
+++ b/loc/templates/base.html
@@ -27,6 +27,7 @@
 {% block content %}
 <div id="main_body">
   {% block top_branding %}
+  {{ block.super }}
   {% endblock top_branding %}
 
     {% block main_body %}
