Added adv. search page; Made search form parent of adv. search form and renamed selector ids.

--- a/core/templates/site.html
+++ b/core/templates/site.html
@@ -96,7 +96,7 @@
 		  <span class="caret"></span>
 		</button>
 		<ul class="dropdown-menu">
-		  <li><a tabindex="-1" href="#">Advanced Search</a></li>
+		  <li><a tabindex="-1" href="/search/advanced/">Advanced Search</a></li>
 		  <li><a tabindex="-1" href="/newspapers/">All Digitized Newspapers</a></li>
 		  <li><a tabindex="-1" href="/search/titles/">U.S. Newspaper Directory</a></li>
 		</ul>
